...
    }

    val taskuiState by viewModel.CreateTaskUistate
    val golsUiState by viewModel.CreateGolsUistate

    Scaffold(
        modifier = modifier.fillMaxSize().testTag("add_task_screen"),
        snackbarHost = { SnackbarHost(hostState = snackBarHostState) }
    ) { paddingValues ->
    Box(
        modifier = modifier
            .fillMaxSize()
            .background(Color(0xFF1D1D2A))
...
        ) {
            OutlinedTextField(
                value = taskuiState.title,
                onValueChange = viewModel::onTitleTaskChange,
                modifier = Modifier
                    .fillMaxWidth(0.75f),
                label = { Text("Title",
                    fontFamily = FontFamily.Monospace, color = Color.White)
                        },
                singleLine = true
            )
            OutlinedTextField(
                value = taskuiState.description,
                onValueChange = viewModel::onDescriptionTaskChange,
                modifier = Modifier
                    .fillMaxWidth(0.75f),
                label = { Text("Description",
                    fontFamily = FontFamily.Monospace, color = Color.White) },
            )
            DatePick(
                taskuiState.openDatePicker,
                taskuiState.deadLine,
                viewModel::setOpenDatePicker,
                viewModel::updateTaskDeadLine,
                "DeadLine_task"
            )
            DropDownMenuSample(
                options = viewModel.options,
                expanded = viewModel.expandedPriority.value,
                onExpandedChange = viewModel::onExpandedPriorityChange,
                selectedOption = viewModel.selectedPriorityOption.value,
...

                            onDateSelected(selectedDate)
                            onDatePickerChange(false)
                        }

                    }) {
                    Text("Select")
                }
            }) {
            DatePicker(state = dateState)
        }

    }
...
        OutlinedTextField(
            value = selectedOption,
            onValueChange = {},
            readOnly = true,
            modifier = Modifier
                .menuAnchor()
                .fillMaxWidth().testTag("priority_dropdown"),
            label = {
                Text(
                    "Select the priority",
                    fontFamily = FontFamily.Monospace,
                    color = Color.White
                )
...
        OutlinedTextField(
            value = selectedIcon.second, // Nome do ícone
            onValueChange = {},
            readOnly = true,
            modifier = Modifier
                .menuAnchor()
                .fillMaxWidth().testTag("select_a_icon"),
            label = { Text("Select a icon", color = Color.White, fontFamily = FontFamily.Monospace) },
            trailingIcon = {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(end = 8.dp)
                ) {
...
            Modifier.fillMaxWidth(),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Button(
                onClick = onAddGolsClick,
                colors = ButtonDefaults.buttonColors(Color(0xFF06D6A0)),
                modifier = Modifier.testTag("add_goals_button")
            ) {
                Text("Add Goals")
            }
            LazyColumn(modifier = Modifier
                .weight(1f) // 🔑 Faz a lista ocupar apenas o espaço disponível
                .fillMaxWidth(),
...
                    }

                }
            }
            Button(
                onClick = onSaveTaskClick,
                modifier = Modifier.fillMaxWidth(0.75f).testTag("save_task_button"),
                colors = ButtonDefaults.buttonColors(Color(0xFF3A86FF))
            ) {
                Text("Save")
            }
            Button(
                onClick = onCancelTaskClick,
...
        )
        {
            OutlinedTextField(
                createGoalsScreenState.title,
                onValueChange = onGoalsTaskChange,
                modifier = Modifier
                    .fillMaxWidth(0.75f).testTag("goals_title"),
                label = {
                    Text(
                        "Title",
                        fontFamily = FontFamily.Monospace,
                        color = Color.White
                    )
...
            )

            OutlinedTextField(
                createGoalsScreenState.description,
                onValueChange = onDescriptionGoalsChange,
                modifier = Modifier
                    .fillMaxWidth(0.75f).testTag("goals_description"),
                label = {
                    Text(
                        "Description",
                        fontFamily = FontFamily.Monospace,
                        color = Color.White
                    )
                }
            )
            DatePick(
                createGoalsScreenState.openGoalsDatePicker,
                createGoalsScreenState.deadLine, onDatePickerChange,
                onDateSelected,
                "DeadLine_goals"
            )
            OutlinedTextField(
                createGoalsScreenState.timeToComplete,
                onValueChange = onTimeToCompleteChange,
                modifier = Modifier.testTag("time_to_complete"),
                label = {
                    Text(
                        "Time to complete",
                        fontFamily = FontFamily.Monospace,
                        color = Color.White
                    )
...
            ) {
                Button(
                    onClick = {
                    onCreateGols(index)
                    onGoalsIsSaveChange()
                }, colors = ButtonDefaults.buttonColors(Color(0xFF06D6A0)),
                    modifier = Modifier.testTag("confirm_goals_button") ) {
                    Text("Add")
                }
                Button(
                    onClick = { onRemoveGoalsClick(index) },
                    colors = ButtonDefaults.buttonColors(Color(0xFFFF006E))
                ) {
...
