...
            modifier = modifier
                .fillMaxSize()
                .background(
                    Color(0xFF1D1D2A)
                )
                .padding(top = 20.dp)
                .testTag("home_screen")
        ){
            Column(modifier = Modifier.fillMaxSize()) {
                UserHomeScreen(uiState, onNotificationClick, onSearchTaskClick)
                SettingsPart(
                    openDatePicker = uiState.openDatePicker,
                    date = uiState.actualDay,
...
        NavigationBarItem(
            selected = currentRoute == Screens.HOME_SCREEN.name,
            onClick = { onNavigationSelected(Screens.HOME_SCREEN.name)},
            icon = {
                Icon(
                    Icons.Default.Home,
                    contentDescription = "Home",
                    tint = Color.White
                )
            },
            colors = NavigationBarItemDefaults.colors(
                indicatorColor = Color(0xFFB4EF2C)
            ),
...
                        .clip(CircleShape)
                        .background(Color(0xFFFF6B6B))
                        .padding(16.dp)
                        .clickable {
                            onNotificationClick()
                        }
                        .testTag("has_notification")
                ){
                    Icon(Icons.Default.Notifications,
                        null,
                        tint = Color.White
                    )
                }
...
                    .padding(16.dp)
                    .clickable {
                        scope.launch {
                            drawerState.open()
                        }
                    }
                    .testTag("tasks_menu")
            ){
                Icon(Icons.Default.Menu,
                    null,
                    tint = Color.White
                )
            }
...
                    .background(Color(0x166EA68E))
                    .padding(5.dp),
                verticalAlignment = Alignment.CenterVertically
            ){
                Button(modifier = Modifier
                    .fillMaxWidth()
                    .testTag("add_task_button"),
                    onClick = onAddTaskClick,
                    colors = ButtonDefaults.buttonColors(Color.Transparent)
                ) {
                    Icon(Icons.Default.Add,
                        null,
                        tint = Color.White
...
            .clip(RoundedCornerShape(16.dp))
            .background(Color(0xFFD64545))
            .clickable {
                onTaskClick(task.id)
            }
            .padding(15.dp)
            .testTag("delay_task_card") // 25% da altura da tela)
    ) {
        Column(modifier = Modifier.fillMaxSize()) {
            Row(
                Modifier
                    .size(54.dp)
                    .clip(CircleShape)
...
}

@Composable
fun DrawerContent(onLateTaskClick: () -> Unit, onCompletedTaskClick: () -> Unit){
    ModalDrawerSheet(
        drawerContainerColor = Color(0xFF2C2C3A),
        modifier = Modifier.testTag("drawer_content")
    ) {
        Text(
            "Tasks infos",
            modifier = Modifier.padding(16.dp),
            fontFamily = FontFamily.Monospace,
            fontSize = 25.sp,
...
            colors = NavigationDrawerItemDefaults.colors(
                unselectedContainerColor = Color.Transparent,
                unselectedTextColor = Color.White,
                unselectedIconColor = Color.White,
                selectedContainerColor = Color(0xFF2D2D3A)
            ),
            modifier = Modifier.testTag("all_completed_task")
        )
    }
}

@Composable
@OptIn(ExperimentalMaterial3Api::class, FormatStringsInDatetimeFormats::class)
...
