...
){
    Box(
        modifier = Modifier
            .fillMaxWidth()
            .clip(RoundedCornerShape(16.dp))
            .background(Color(0xFF588D7D))
            .padding(10.dp).testTag("view_goals_card")
    ){

        Column(Modifier
            .fillMaxWidth()
            .padding(10.dp)) {
            Text(goal.title,
...
                    value = sliderPosition,
                    onValueChange = { sliderPositionFunc(it) },
                    colors = SliderDefaults.colors(
                        thumbColor = Color(0xFF4E7B6E),
                        activeTrackColor = Color(0xFFB7EE35)
                    ),
                    modifier = Modifier.fillMaxWidth(0.85f).testTag("slider_goal_progress")
                )
                Text(
                    "${(sliderPosition * 100).toInt()}%",
                    fontFamily = FontFamily.Monospace,
                    color = Color.White
                )
...
fun GoalsCard(goal: Goals){
    Box(
        Modifier
            .fillMaxWidth()
            .clip(RoundedCornerShape(16.dp))
            .background(Color(0xFF588D7D))
            .padding(10.dp).testTag("goals_card")
    ){
        Column(Modifier.fillMaxWidth()) {
            Row(modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically) {
                Row(
...
    onUpdatePercentGoalsClick: ()-> Unit, expanded: Boolean,
    expandedChange: (Boolean) -> Unit) {

    Box(modifier = Modifier
        .fillMaxWidth()
        .clickable { expandedChange(!expanded) }
        .padding(8.dp).testTag("goals_card_switcher")
    ) {
        AnimatedContent(targetState = expanded, transitionSpec = {
            fadeIn() with fadeOut()
        }) { isExpanded ->
            if (isExpanded) {
                ViewGoalsCard(
...
